# r2-gtk3

./: Cargo.toml
src/: application.rs  config.rs  main.rs  utils.rs
src/models/: mod.rs  provider.rs  providers.rs  search_provider.rs
src/widgets/: mod.rs  window.rs
src/widgets/preferences/: preferences_backup.rs  window.rs
src/widgets/providers/: mod.rs  page.rs  page_backup.rs
ui/: preferences.ui  preferences.ui~  provider_page.ui  provider_page.ui~  window.ui  window.ui~
