[package]
name = "r2-gtk3"
version = "0.1.0"
edition = "2021"



[dependencies]
gtk = {version = "0.18.1", default-features = false, features = ["v3_24"]}
glib = {version = "0.18.1", default-features = false, features = ["v2_58"]}
#glib = "0.20.1"
once_cell = "1.19.0"
tracing = {version = "0.1", default-features = false}
tracing-subscriber = {version = "0.3", default-features = false, features = ["fmt"]}
#new
futures-channel = "0.3.30"
tokio = {version = "1.0", default-features = false, features = ["rt-multi-thread", "fs", "io-util"]}
anyhow = "1.0"
